--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -1,8 +1,46 @@
 {
     "language" : "Español",
     
-    "create" : "Crear",
     "play" : "Jugar",
     "my_games" : "Mis juegos",
-    "options" : "Opciones"
+    
+    "create" : "Crear",
+    "word_search" : "Búsqueda de palabras",
+    "challenge" : "Desafío",
+    "level" : "Nivel",
+    
+    "options" : "Opciones",
+    "my_account" : "Mi cuenta",
+    "select_language" : "Seleccione el idioma",
+    "back" : "Atrás",
+
+    "publication_mode" : "Modo de publicación",
+    "public" : "Público",
+    "privet" : "Alheña",
+    "fixed" : "Fijo",
+    "dynam" : "Dinámico",
+    "enter_name_of_the_word_search" : "Ingrese el nombre de la búsqueda de palabras",
+    "enter_word" : "Ingrese la palabra",
+    "add" : "Agregar",
+    "generate" : "Generar",
+
+    "my_crated_games" : "Mis juegos creados",
+    "word_searches" : "Búsquedas de palabras",
+    "challenges" : "RETOS",
+    "code_to_share" : "Código para compartir",
+    "word_search_title" : "título de búsqueda de palabras",
+    "words" : "Palabras",
+    "users" : "Usuarios",
+    "leaderboard" : "Tabla de clasificación",
+    "duplicate" : "Duplicado",
+    "create_word_search" : "Crear sopa de letras",
+
+    "search" : "Buscar",
+    "random_word_search" : "Búsqueda de palabras al azar",
+    "word_search_categories" : "Categorías de búsqueda de palabras",
+    "random_challenge" : "Desafío aleatorio",
+    "challenge_by_category" : "Desafío por categoría",
+    "play_by_entering_code" : "Juega por código",
+    "enter_code" : "Introduzca el código",
+    "play_with_entered_code" : "Juega con el código ingresado"
 }
