--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -5,8 +5,8 @@
     "my_games" : "Mis juegos",
     
     "create" : "Crear",
-    "word_search" : "Búsqueda de palabras",
-    "challenge" : "Desafío",
+    "word_search" : "SOPA DE LETRAS",
+    "challenge" : "RETO",
     "level" : "Nivel",
     
     "options" : "Opciones",
@@ -16,19 +16,19 @@
 
     "publication_mode" : "Modo de publicación",
     "public" : "Público",
-    "privet" : "Alheña",
+    "privet" : "Privada",
     "fixed" : "Fijo",
     "dynam" : "Dinámico",
-    "enter_name_of_the_word_search" : "Ingrese el nombre de la búsqueda de palabras",
+    "enter_name_of_the_word_search" : "Ingrese el nombre de la sopa de letras",
     "enter_word" : "Ingrese la palabra",
     "add" : "Agregar",
     "generate" : "Generar",
 
     "my_crated_games" : "Mis juegos creados",
-    "word_searches" : "Búsquedas de palabras",
+    "word_searches" : "SOPAS DE LETRAS",
     "challenges" : "RETOS",
     "code_to_share" : "Código para compartir",
-    "word_search_title" : "título de búsqueda de palabras",
+    "word_search_title" : "Nombre de la sopa de letras",
     "words" : "Palabras",
     "users" : "Usuarios",
     "leaderboard" : "Tabla de clasificación",
@@ -36,10 +36,10 @@
     "create_word_search" : "Crear sopa de letras",
 
     "search" : "Buscar",
-    "random_word_search" : "Búsqueda de palabras al azar",
-    "word_search_categories" : "Categorías de búsqueda de palabras",
-    "random_challenge" : "Desafío aleatorio",
-    "challenge_by_category" : "Desafío por categoría",
+    "random_word_search" : "SOPA DE LETRAS AL AZAR",
+    "word_search_categories" : "SOPAS DE LETRAS POR TEMA",
+    "random_challenge" : "RETO AL AZAR",
+    "challenge_by_category" : "RETO POR TEMA",
     "play_by_entering_code" : "Juega por código",
     "enter_code" : "Introduzca el código",
     "play_with_entered_code" : "Juega con el código ingresado",
