edit game screen

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -98,6 +98,8 @@
     "offf" : "of",
     "time" : "TIME",
     "see_leaderboard" : "See leaderboard",
-    "startNew_game" : "Start new game"
+    "startNew_game" : "Start new game",
+
+    "ratings" : "Ratings"
 
 }
