--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -95,6 +95,7 @@
     "offf" : "de",
     "time" : "TIEMPO",
     "see_leaderboard" : "Ver tabla de posiciones",
-    "startNew_game" : "Empezar juego nuevo"
+    "startNew_game" : "Empezar juego nuevo",
 
+    "ratings" : "clasificación"
 }
