--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -97,5 +97,5 @@
     "see_leaderboard" : "Ver tabla de posiciones",
     "startNew_game" : "Empezar juego nuevo",
 
-    "ratings" : "clasificación"
+    "ratings" : "Clasificación"
 }
