--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -45,7 +45,7 @@
     "play_with_entered_code" : "Juega con el código ingresado",
 
     "categories" : "Categorías",
-    "word_search_name" : "Nombre de la búsqueda de palabras",
+    "word_search_name" : "Nombre de la sopa de letras",
     "select_level" : "Selecciona el nivel",
     "easy" : "Fácil",
     "medium" : "Medio",
@@ -57,10 +57,12 @@
     "change" : "Cambiar",
     "save" : "Ahorrar",
     "free" : "Gratis",
-    "premium" : "De primera calidad",
+    "premium" : "Premium",
     "current_plan" : "Plan actual",
-    "remaining_game_of_day" : "Juego restante del día",
-    "upgrade" : "Mejora",
+        "addword": "Agrega una palabra",
+           "select_language_game" : "Seleccionar idioma para este juego",
+    "remaining_game_of_day" : "Partidas restantes por hoy",
+    "upgrade" : "Hazte Premium",
 
     "only_mark_the_words_related_to" : "Solo marca las palabras\nrelacionadas con",
     "continuee" : "Continuar",
@@ -95,12 +97,15 @@
     "offf" : "de",
     "time" : "TIEMPO",
      "ok":"OK",
-      "wrongcode":"Se ingresó un código compartido no válido. ¡Inténtalo de nuevo!",
+    "wordcount":"Palabras a desplegar",
+      "wordlimit_":"Las palabras deben ser menores a 14 caracteres.",
+     "wrongcode":"Se ingresó un código compartido no válido. ¡Inténtalo de nuevo!",
     "nogame":"¡No hay ningún juego disponible para jugar!",
     "game_limit": "Has alcanzado el límite de 50 juegos.",
     "words_limit":"No puedes agregar más de 6 juegos en el plan gratuito.",
     "see_leaderboard" : "Ver tabla de posiciones",
     "startNew_game" : "Empezar juego nuevo",
-
+  "created_success":"Juego creado con éxito",
+      "edited_success":"Juego editado con éxito",
     "ratings" : "Clasificación"
 }
