--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -98,6 +98,7 @@
     "time" : "TIEMPO",
      "ok":"OK",
      "users":"Usuarios",
+     "_words_cant": "¡No se pueden agregar más de 18 palabras en el juego!",
     "wordcount":"Palabras a desplegar",
       "wordlimit_":"Las palabras deben ser menores a 14 caracteres.",
      "wrongcode":"Se ingresó un código compartido no válido. ¡Inténtalo de nuevo!",
