Changed logo, name, fixed leaderboards, matchmaking, search

--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -45,7 +45,7 @@
     "play_with_entered_code" : "Juega con el código ingresado",
 
     "categories" : "Categorías",
-    "word_search_name" : "Nombre de la búsqueda de palabras",
+    "word_search_name" : "Nombre de la sopa de letras",
     "select_level" : "Selecciona el nivel",
     "easy" : "Fácil",
     "medium" : "Medio",
@@ -55,12 +55,14 @@
     
     "username" : "Nombre de usuario",
     "change" : "Cambiar",
-    "save" : "Ahorrar",
+    "save" : "Guardar",
     "free" : "Gratis",
-    "premium" : "De primera calidad",
+    "premium" : "Premium",
     "current_plan" : "Plan actual",
-    "remaining_game_of_day" : "Juego restante del día",
-    "upgrade" : "Mejora",
+        "addword": "Agrega una palabra",
+           "select_language_game" : "Seleccionar idioma para este juego",
+    "remaining_game_of_day" : "Partidas restantes por hoy",
+    "upgrade" : "Hazte Premium",
 
     "only_mark_the_words_related_to" : "Solo marca las palabras\nrelacionadas con",
     "continuee" : "Continuar",
@@ -81,10 +83,12 @@
     "maximum_word_length_description" : "La asignación máxima para la longitud de una palabra es de 14 letras.",
     "dynamic_word_search" : "¿Qué es una búsqueda dinámica de palabras?",
     "dynamic_word_search_description" : "Una sopa de letras dinámica es aquella en la que la cuadrícula es diferente para cada jugador. Además, el creador puede seleccionar la cantidad de palabras que se mostrarán en la búsqueda de palabras.",
+      "dynamic_word_challenge" : "¿Qué es un reto fijo y un reto dinámico?",
+            "dynamic_word_challenge_description" : "Un reto fijo es cuando las palabras se muestran en el misma ubicación en el juego para todos los usuarios. El reto dinámico muestras a cada jugador en distintas ubicaciones las palabras del juego.",
     "what_is_challenge" : "¿Qué es un desafío?",
     "what_is_challenge_description" : "En un desafío, hay palabras correctas e incorrectas en la lista y en la cuadrícula. Solo debes marcar las palabras que correspondan al título del reto. Por ejemplo, si el título del reto es: Países Europeos, solo se deben marcar los países europeos, los que no son de Europa no se deben marcar ya que serían incorrectos.",
     "this_feature" : "Esta característica solo está disponible para usuarios premium. Actualice para usar esta función.",
-
+    "hits":"aciertos",
     "rate_this" : "CALAIFICAR ESTA SOPA DE LETRAS",
     "rate_this_challange" : "CALAIFICAR ESTE RETO",
     "game" : "JUEGO",
@@ -94,8 +98,28 @@
     "hits" : "ACIERTOS",
     "offf" : "de",
     "time" : "TIEMPO",
+    "yes": "SI",
+       "no": "NO",
+      "exit_app" : "Estás seguro que quieres salir del app?",
+     "ok":"OK",
+     "users":"Usuarios",
+        "code_copied": "Después de copiar",
+     "words_no": "¡No se pueden agregar más de 18 palabras en el juego!",
+    "wordcount":"Palabra0s a desplegar",
+      "wordlimit_":"Las palabras deben ser menores a 14 caracteres.",
+     "wrongcode":"Se ingresó un código compartido no válido. ¡Inténtalo de nuevo!",
+    "nogame":"¡No hay ningún juego disponible para jugar!",
+    "game_limit": "Has alcanzado el límite de juego de hoy.",
+    "words_limit":"No puedes agregar más de 6 palabras en el plan gratuito.",
     "see_leaderboard" : "Ver tabla de posiciones",
     "startNew_game" : "Empezar juego nuevo",
-
+       "reached_limit": "No puedo jugar a este juego porque ya ha alcanzado el límite.",
+  "created_success":"Juego creado existosamente",
+      "edited_success":"Actualizado exitosamente",
+      "duplicated_success": "Duplicado exitosamente",
+      "no_search_found": "No hay resultado,por favor  intenta con otras palabras.",
+       "publicprivate": "¿Qué es una sopa de letras pública o privada?",
+              "publicprivatedesc": "Una Word search privada la puede jugar cualquier persona que use la app, las privadas solamente se puede jugar por medio de un código compartido.",
     "ratings" : "Clasificación"
+
 }
