--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -15,6 +15,7 @@
     "options" : "Options",
     "my_account" : "MY ACCOUNT",
     "select_language" : "SELECT LANGUAGE",
+     "select_language_game" : "Select Language for this game",
     "back" : "Back",
 
     "publication_mode" : "Publication mode",
@@ -46,7 +47,9 @@
     "play_by_entering_code" : "Play by code",
     "enter_code" : "Enter code",
     "play_with_entered_code" : "Play with the entered code",
-
+    "created_success":"Game Created Successfully",
+      "edited_success":"Game Edited Successfully",
+        "duplicated_success": "Game Duplicated Successfully",
     "categories" : "Categories",
     "word_search_name" : "Word Search Name",
     "select_level" : "Select Level",
@@ -55,14 +58,17 @@
     "advanced" : "Advanced",
     "hard" : "Hard",
     "expert" : "Expert",
-    
+    "exit_app" : "Do you want to exit the app?",
+    "yes": "YES",
+    "no": "NO",
     "username" : "Username",
     "change" : "Change",
     "save" : "Save",
     "free" : "Free",
     "premium" : "Premium",
     "current_plan" : "Current plan",
-    "remaining_game_of_day" : "Remaining game of day",
+    "addword": "Add some word",
+    "remaining_game_of_day" : "Games remaining for today",
     "upgrade" : "Upgrade",
 
     "only_mark_the_words_related_to" : "Only mark the words\nrelated to",
@@ -84,6 +90,8 @@
     "maximum_word_length_description" : "The maximum allowance for the length of a word is 14 letters.",
     "dynamic_word_search" : "What is a dynamic word search?",
     "dynamic_word_search_description" : "A dynamic word search is one in which the grid is different for each player. In addition, the creator can select the number of words that will be displayed in the word search.",
+      "dynamic_word_challenge" : "What is a fixed challenge and a dynamic challenge?",
+        "dynamic_word_challenge_description" : "A fixed challenge is when the words are displayed in the same location in the game for all users. The dynamic challenge shows each player the game's words in different locations.",
     "what_is_challenge" : "What is a challenge?",
     "what_is_challenge_description" : "In a challenge, there are correct and incorrect words in the list and in the grid. You should only mark the words that correspond to the title of the challenge. For example, if the title of the challenge is: European Countries, you should only mark the European countries, those that are not from Europe should not be marked as they would be incorrect.",
     "this_feature" : "This feature is only available for premium users. Upgrade to use this feature.",
@@ -97,9 +105,23 @@
     "hits" : "HITS",
     "offf" : "of",
     "time" : "TIME",
+    "ok":"OK",
+     "users":"Users",
+     "code_copied": "Share code copied!",
+      "words_no": "Cannot add more than 18 words in the game!",
+    "wordcount":"Word Count",
+    "wordlimit_":"Word should be of 14 or less than 14 characters.",
+    "wrongcode":"Invalid share code entered. Please try again!",
+    "nogame":"No game available to play!",
+    "words_limit":"You can't add more than 6 words in free plan.",
+    "game_limit": "You have reached the today game limit.",
     "see_leaderboard" : "See leaderboard",
     "startNew_game" : "Start new game",
-
+    "reached_limit": "Cannot play this game as it has already reached the limit",
+      "no_search_found": "No result found, please try other words.",
+      "hits":"hits",
+      "publicprivate": "What is a public or private word search?",
+        "publicprivatedesc": "A private Word search can be played by anyone using the app; private ones can only be played through a shared code.",
     "ratings" : "Ratings"
 
 }
