fixed challenge, result, sound, etc issues and added new features

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -25,11 +25,11 @@
     "privet" : "Private",
     "fixed" : "Fixed",
     "dynam" : "Dynamic",
-    "enter_name_of_the_word_search" : "Enter name of the word search",
+    "enter_name_of_the_word_search" : "Enter a name for your word search",
     "enter_word" : "Enter word",
     "add" : "Add",
     "generate" : "Generate",
-
+    "delete_game":"Are you sure you want to delete the game?",
     "my_crated_games" : "My created games",
     "word_searches" : "Word searches",
     "challenges" : "CHALLENGES",
@@ -40,7 +40,7 @@
     "leaderboard" : "Leaderboard",
     "duplicate" : "Duplicate",
     "create_word_search" : "Create word search",
-
+    "end_game":"Are you sure you want to end the game?",
     "search" : "Search",
     "random_word_search" : "Random word search",
     "word_search_categories" : "Word search categories",
@@ -52,6 +52,7 @@
     "created_success":"Game Created Successfully",
       "edited_success":"Game Edited Successfully",
         "duplicated_success": "Game Duplicated Successfully",
+                "deleted_success": "Game Deleted Successfully",
     "categories" : "Categories",
     "word_search_name" : "Word Search Name",
     "select_level" : "Select Level",
@@ -97,16 +98,19 @@
     "what_is_challenge" : "What is a challenge?",
     "what_is_challenge_description" : "In a challenge, there are correct and incorrect words in the list and in the grid. You should only mark the words that correspond to the title of the challenge. For example, if the title of the challenge is: European Countries, you should only mark the European countries, those that are not from Europe should not be marked as they would be incorrect.",
     "this_feature" : "This feature is only available for premium users. Upgrade to use this feature.",
-    
+    "correct" :"Correct",
+        "incorrect" :"Incorrect",
     "rate_this" : "RATE THIS WORD SEARCH",
     "rate_this_challange" : "RATE THIS CHALLENGE",
     "game" : "GAME",
     "not_complete" : "NOT COMPLETED",
     "congratulations" : "CONGRATULATIONS!",
     "complete" : "COMPLETED",
-    "hits" : "HITS",
+    "hits" : "Hits",
+    "user" : "User",
+     "time" : "Time",
     "offf" : "of",
-    "time" : "TIME",
+    "time" : "Time",
     "ok":"OK",
      "users":"Users",
      "code_copied": "Share code copied!",
@@ -121,7 +125,11 @@
     "startNew_game" : "Start new game",
     "reached_limit": "Cannot play this game as it has already reached the limit",
       "no_search_found": "No result found, please try other words.",
-      "hits":"hits",
+      "hits":"Hits",
+      "sound":"SOUND",
+       "active":"ACTIVE",
+         "inactive":"INACTIVE",
+         "privacy_policy":"Privacy Policy",
       "publicprivate": "What is a public or private word search?",
         "publicprivatedesc": "A private Word search can be played by anyone using the app; private ones can only be played through a shared code.",
     "ratings" : "Ratings"
